# object_recognition_clusters

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
python/object_recognition_clusters/: __init__.py  object_clusters_publisher.py
scripts/: clusters_to_pose.py
src/: CMakeLists.txt
src/io/: CMakeLists.txt  PointCloudMsgAssembler.cpp  module.cpp
src/object_recognition_clusters/: __init__.py  cluster_bounding_box_finder.py
