<?xml version="1.0"?>
<package>
  <name>object_recognition_clusters</name>
  <version>0.1.0</version>
  <description>The object_recognition_clusters package</description>
  <maintainer email="bence.magyar@pal-robotics.com">Bence Magyar</maintainer>
  <license>BSD</license>
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>
  <author>Kaijen Hsiao</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend version_gte="1.10.6">sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ecto</build_depend>
  <build_depend>ecto_ros</build_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>ecto</run_depend>
  <run_depend>ecto_ros</run_depend>
  <run_depend>pcl_ros</run_depend>

  <export>
  </export>
</package>
